derive_builder/tests/compile-fail/private_build_fn.stderr
warning: unused import: `Lorem`
  --> tests/compile-fail/private_build_fn.rs:23:21
   |
23 |     use container::{Lorem, LoremBuilder};
   |                     ^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

error[E0624]: method `build` is private
  --> tests/compile-fail/private_build_fn.rs:27:42
   |
7  |     #[derive(Debug, Default, Builder)]
   |                              ------- private method defined here
...
27 |     let lorem2 = LoremBuilder::default().build().unwrap();
   |                                          ^^^^^ private method
